<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Muzei - Bing Image of the Day</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="source_description">Bing Image of the Day</string>
    <string name="setting_landscape">Landscape</string>
    <string name="setting_portrait">Portrait</string>
    <string name="fragment_settings_orientation_label">Orientation</string>
    <string name="fragment_settings_market_label">Market</string>
    <string name="fragment_settings_button_license_label">About</string>
    <string name="copyright">© 2017 Devmil Solutions - Michael Lamers</string>
    <string name="activity_license_info_license_info_headline">License Info</string>
    <string name="license_info_activity_label">About</string>
    <string name="command_share_message">My current Android wallpaper: \'%1$s\'</string>
    <string name="command_share_title">Share current Bing image</string>
    <string name="command_open_title">Open current Bing image URL</string>
</resources>
