<ScrollView
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:layout_gravity="center"
    android:fitsSystemWindows="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="de.devmil.muzei.bingimageofthedayartsource.SettingsActivity$PlaceholderFragment">

        <TextView
            android:id="@+id/fragment_settings_orientation_label"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:textAppearance="?android:textAppearanceLarge"
            android:fontFamily="sans-serif-condensed"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_settings_orientation_label"
        />
        <RadioGroup
            android:layout_marginTop="20dp"
            android:id="@+id/rbg_orientation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fragment_settings_orientation_label"
            android:orientation="vertical">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_landscape"
                android:id="@+id/fragment_settings_orientation_landscape"
                android:fontFamily="sans-serif-condensed"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textStyle="bold"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_portrait"
                android:id="@+id/fragment_settings_orientation_portrait"
                android:fontFamily="sans-serif-condensed"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textStyle="bold"/>
        </RadioGroup>
        <TextView
            android:id="@+id/fragment_settings_market_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rbg_orientation"
            android:layout_marginTop="20dp"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="@string/fragment_settings_market_label"
            android:fontFamily="sans-serif-condensed"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textStyle="bold"
            />
        <Spinner
            android:id="@+id/fragment_settings_market"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fragment_settings_market_label"
            android:layout_marginTop="0dp"/>

        <Button
            android:id="@+id/fragment_settings_button_license"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_settings_button_license_label"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_below="@id/fragment_settings_market"
            android:layout_marginTop="20dp"/>
    </RelativeLayout>
</ScrollView>