<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:paddingTop="40dp"
    android:fitsSystemWindows="true"
    android:layout_gravity="center"
    android:background="@color/activity_background_overlay">
    <LinearLayout
        android:id="@+id/activity_license_info_llAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="?android:textAppearanceLarge"
            android:fontFamily="sans-serif-condensed"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:textAppearance="?android:textAppearanceMedium"
            android:fontFamily="sans-serif-condensed"
            android:textColor="#fff"
            android:textStyle="bold"
        />
    </LinearLayout>
    <TextView
        android:id="@+id/activity_license_info_text_license_headline"
        android:paddingTop="30dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_license_info_llAbout"
        android:text="@string/activity_license_info_license_info_headline"
        android:textAppearance="?android:textAppearanceLarge"
        android:fontFamily="sans-serif-condensed"
        android:textAllCaps="true"
        android:textColor="#fff"
        android:textStyle="bold"
        />
    <ListView
        android:id="@+id/activity_license_info_listView"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_license_info_text_license_headline">
    </ListView>
</RelativeLayout>
